package com.blueberryprojects.cryptowatch.common

object Tags {

    const val INPUT_SEARCH_COIN = "INPUT_SEARCH_COIN"
    const val MARKET_CAP_RANK = "MARKET_CAP_RANK"
    const val LIST_COINS = "LIST_COINS"
    const val COIN_DETAILS_NAME_SYMBOL = "COIN_DETAILS_NAME_SYMBOL"
}